tests/snapshots/integration__integration_tests__merge__merge_rebase_conflict.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpkIyPq0/test-config.toml
---
success: false
exit_code: 1
----- stdout -----
💡 [2mOnly 1 commit since [0m[1m[36mmain[0m[2m - no squashing needed[0m
🔄 [36mRebasing onto [0m[1m[36mmain[0m[36m...[0m

----- stderr -----
❌ [31mRebase onto [0m[1m[31mmain[0m[31m incomplete: REBASING 1/1[0m

💡 [2mResolve conflicts and run 'git rebase --continue'[0m
💡 [2mOr abort with 'git rebase --abort'[0m
