tests/snapshots/integration__integration_tests__merge__merge_rebase_true_rebase.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mRebasing onto [1mmain[22m...[39m
✅ [32mRebased onto [1mmain[22m[39m
🔄 [36mMerging 1 commit to [1mmain[22m @ [2mae48a8e[22m (no commit/squash needed)[39m
[107m [0m  * [33mae48a8e[m Add feature
[107m [0m   feature.txt | 1 [32m+[m
[107m [0m   1 file changed, 1 insertion(+)
✅ [32mMerged to [1mmain[22m [90m(1 commit, 1 file, [32m+1[39m[39m[90m)[39m[39m
🔄 [36m[36mRemoving [1mtrue-rebase-test[22m worktree & branch in background (no marginal contribution to main)[39m[39m
