tests/snapshots/integration__integration_tests__merge__merge_squash_deterministic.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
    - "--squash"
  env:
    CLICOLOR_FORCE: "1"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpNJv6pO/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mValidating merge...[0m
🔄 [36mSquashing 3 commits into one...[0m
🔄 [36mGenerating squash commit message...[0m
[40m [0m [1mSquash commits from main[0m
[40m [0m 
[40m [0m Combined commits:
[40m [0m - feat: add file 1
[40m [0m - fix: update logic
[40m [0m - docs: update readme
✅ [32mSquashed 3 commits into one[0m
🔄 [36mRebasing onto [1m[36mmain[0m...[0m
🔄 [36mPushing 1 commit to [1m[36mmain[0m @ [SHA][0m

* [33m27eb169[m[33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature[m[33m)[m Squash commits from main

 file1.txt | 1 [32m+[m
 file2.txt | 1 [32m+[m
 file3.txt | 1 [32m+[m
 3 files changed, 3 insertions(+)

✅ [32mPushed to [1m[32mmain[0m (1 commit, 3 files, [32m+3[0m)  [0m
🔄 [36mCleaning up worktree...[0m
✅ [32mRemoved worktree, returned to primary at [REPO][0m

✅ [32mMerge complete

[2mMerged: [1mfeature[0m → [1mmain[0m[0m
[2mSquashed: 3 commits into 1[0m
[2mWorktree: Removed[0m[0m

----- stderr -----
