tests/snapshots/integration__integration_tests__merge__merge_squash_empty_changes.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpXqNYIS/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
🔄 🔄 [36mSquashing 3 commits into 1...[0m
🔄 🔄 [36mGenerating squash commit message...[0m
💡 💡 [2mUsing fallback commit message. Run 'wt config help' to configure LLM-generated messages[0m
🔄 [40m [0m  [1mSquash commits from main[0m
[40m [0m  
[40m [0m  Combined commits:
[40m [0m  - Change 1
[40m [0m  - Change 2
[40m [0m  - Revert to initial

⚪ [2mNo changes after squashing 3 commits (commits resulted in no net changes)[0m
🔄 ✅ [32mMerged to [1m[32mmain[0m[0m
✅ ✅ [32mReturned to primary at [1m[32m[REPO][0m[0m
🔄 [36mRemoving worktree & branch...[0m

----- stderr -----
