tests/snapshots/integration__integration_tests__merge__merge_squash_llm_fallback.snap
---
source: tests/integration_tests/merge.rs
info:
  program: wt
  args:
    - merge
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1735776000"
    WORKTRUNK_BIN: ""
    WORKTRUNK_COMMIT_GENERATION__COMMAND: nonexistent-llm-command
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
🔄 [36mSquashing 2 commits into a single commit [90m(2 files, [32m+2[39m[39m[90m)[39m...[39m
🔄 [36mGenerating squash commit message...[39m
💡 [2mUsing fallback commit message. Run 'wt config --help' for LLM setup guide[22m
[107m [0m  [1mSquash commits from main[22m
[107m [0m  
[107m [0m  Combined commits:
[107m [0m  - feat: new feature
[107m [0m  - fix: bug fix
✅ [32mSquashed @ [2m091f0c5[22m[39m
🔄 [36mMerging 1 commit to [1mmain[22m @ [2m091f0c5[22m (no rebase needed)[39m
[107m [0m  * [33m091f0c5[m Squash commits from main
[107m [0m   file1.txt | 1 [32m+[m
[107m [0m   file2.txt | 1 [32m+[m
[107m [0m   2 files changed, 2 insertions(+)
✅ [32mMerged to [1mmain[22m [90m(1 commit, 2 files, [32m+2[39m[39m[90m)[39m[39m
🔄 [36m[36mRemoving [1mfeature[22m worktree & branch in background (no marginal contribution to main)[39m[39m
